@@ -1,3 +1,13 @@
+2012-08-19  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+        [ftview] Implement adjustable stroker radius.
+
+	* src/ftview.c (status): New field 'radius'.
+	(Render_Stroke): Updated.
+	(Process_Event): Add the keys 'r' and 'R' to handle the change.
+	(event_radius_change): Implement it.
+	(event_help): Updated.
+
 2012-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
         [ftview] Use more readable loop.
